--- a/EDAS/EDAS.WebApp/Views/Shared/_Layout.cshtml
+++ b/EDAS/EDAS.WebApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,26 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-danger dropdown-toggle"
+                                   href="#"
+                                   role="button"
+                                   data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    <span>Algorithms</span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a class="dropdown-item" href="/Algorithm/Backtracking/Combinatronics">Combinatronics</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="/Algorithm/Sorting/QuickSort">Sorting</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
