Welcome page for anon users + dark theme

--- a/EDAS/EDAS.WebApp/Views/Shared/_Layout.cshtml
+++ b/EDAS/EDAS.WebApp/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EDAS.WebApp</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">EDAS.WebApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,27 +20,24 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if(User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link text-danger dropdown-toggle"
+                                <a class="nav-link text-white dropdown-toggle"
                                    href="#"
                                    role="button"
                                    data-bs-toggle="dropdown"
                                    aria-expanded="false">
                                     <span>Algorithms</span>
                                 </a>
-                                <ul class="dropdown-menu">
+                                <ul class="dark-mode dropdown-menu">
                                     <li>
-                                        <a class="dropdown-item" href="/Algorithm/Backtracking/Combinatronics">Combinatronics</a>
+                                        <a class="dark-mode dropdown-item text-white" href="/Algorithm/Backtracking/Combinatronics">Combinatronics</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="/Algorithm/Sorting/QuickSort">Sorting</a>
+                                        <a class="dark-mode dropdown-item text-white" href="/Algorithm/Sorting/QuickSort">Sorting</a>
                                     </li>
                                 </ul>
                             </li>
@@ -59,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - EDAS.WebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - EDAS.WebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
