--- a/EDAS/EDAS.WebApp/wwwroot/css/site.css
+++ b/EDAS/EDAS.WebApp/wwwroot/css/site.css
@@ -18,5 +18,30 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    background-color: #1e1e1e;
+    color: #ffffff;
+    margin-bottom: 60px;
+}
+
+.navbar {
+    background-color: #333;
+    border-bottom: 1px solid #444;
+}
+
+a {
+    color: #00bcd4;
+}
+
+.dark-mode {
+    background-color: #333 !important;
+    border: 1px solid #444 !important;
+}
+
+.dark-mode .dropdown-menu .dropdown-item 
+{
+    color: #ffffff !important; 
+}
+
+.dropdown-item:hover {
+    background-color: #444 !important;
 }
